--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,22 +1,16 @@
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;  
+  box-sizing: border-box;
 }
 
 body {
   /* min-height: 100vh;   */
   /* width: 100%; */
-  background: url("../../assets/waves.png");
+  background: url('../../assets/waves.png');
   background-repeat: no-repeat;
-  background-position: center; 
+  background-position: center;
+  background-position-x: 60%;
   background-color: rgba(35, 35, 35, 1);
-  
+  font-family: 'Montserrat';
 }
-
-
-
-
-
-
-
