--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,12 +5,22 @@
 }
 
 body {
-  /* min-height: 100vh;   */
-  /* width: 100%; */
   background: url('../../assets/waves.png');
   background-repeat: no-repeat;
   background-position: center;
   background-position-x: 60%;
   background-color: rgba(35, 35, 35, 1);
-  font-family: 'Montserrat';
+  font-family: '--montserrat-font', sans-serif;
+}
+
+.MuiTypography-root {
+  font-family: '--montserrat-font', sans-serif;
+}
+
+.MuiButtonBase-root-MuiButton-root {
+  font-family: '--montserrat-font', sans-serif;
+}
+
+.MuiBox-root {
+  font-family: '--montserrat-font', sans-serif;
 }
