--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -64,9 +64,8 @@ $bp-phone: 320px;
 
 .counter {
   font-size: $counter-font-size;
-  font-weight: 700;
   color: $counter-color;
-  font-style: bold;
+  font-weight: bold;
 }
 
 .main_container {
